<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="settings_title">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="search_title">Поиск</string>
    <string name="letter_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="letter_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="shareAppLink">https://practicum.yandex.ru/android-developer/</string>
    <string name="public_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail">nyud91@gmail.com</string>
    <string name="title">Choose Application</string>
    <string name="nothing_found">ничего не найдено\n</string>
    <string name="something_went_wrong">что-то пошло не так\n</string>
    <string name="nothing_found_text">Ничего не нашлось</string>
    <string name="bad_connection_text">Проблемы со связью \n\nЗагрузка не удалась. Проверьте \nподключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="arraw_back">Стрелка назад</string>
    <string name="album">Альбом</string>
    <string name="play_button">Кнопка воспроизведения</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="duration">Длительность</string>
    <string name="album_name">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="zero_time">00:00</string>
    <string name="media_header">Медиатека</string>
    <string name="your_mediateke_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist_created">Вы не создали\n ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="back_button">назад</string>
    <string name="new_playlist_in_media">Новый плейлист</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create_button">Создать</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>
    <string name="minutes">минут</string>
    <string name="tracks_count">треков</string>
    <string name="сomplete_playlist_creation">Завершить создание плейлиста?</string>
    <string name="unsaved_data_warning">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="treck_text_in_bs">треков</string>
    <string name="no_tracks_edded">В плейлист не добавлено треков</string>
    <string name="tracks"> треков</string>
</resources>