<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="28dp"
            android:src="@drawable/arrow_back"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="28dp"
            android:text="@string/settings_title"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/black_theme"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/black_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/share_app"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/share"
            tools:ignore="ContentDescription" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/write_to_support"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/support"
            tools:ignore="ContentDescription"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/terms_of_use"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/terms_of_use"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/arrow_forward"
            tools:ignore="ContentDescription"/>
    </FrameLayout>
</LinearLayout>