<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <View
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        android:background="@color/wight"
        app:layout_constraintBottom_toTopOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="container"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/wight"
        android:contentDescription="@string/arraw_back"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="back_button"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/album"
        android:scaleType="centerCrop"
        app:cornerRadius="8dp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/container"
        tools:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/name_of_song"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/album_cover"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/author_of_song"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/name_of_song"
        tools:text="The Beatles" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_tags="container, back_button" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_tags="add_to_playlist, play_button,add_to_favorites, time" />

    <ImageButton
        android:id="@+id/add_to_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:contentDescription="@string/add_to_favorites"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintEnd_toStartOf="@+id/play_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTag="add_to_playlist"
        app:layout_constraintTop_toTopOf="@id/play_button"
        app:layout_constraintVertical_bias="0.504"
        app:srcCompat="@drawable/add_to_playlist" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:contentDescription="@string/play_button"
        app:layout_constraintEnd_toStartOf="@+id/add_to_favorites"
        app:layout_constraintStart_toEndOf="@+id/add_to_playlist"
        app:layout_constraintTag="play_button"
        app:layout_constraintTop_toBottomOf="@id/author_of_song"
        app:srcCompat="@drawable/play_button" />

    <ImageButton
        android:id="@+id/add_to_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/play_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintTop_toTopOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/play_button"
        app:layout_constraintTag="add_to_favorites"
        app:layout_constraintVertical_bias="0.506"
        app:srcCompat="@drawable/add_to_favorites" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/barrier2"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTag="time"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        tools:text="0:30" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/album"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier2" />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="8dp"
        android:text="@string/album_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="8dp"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="8dp"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year" />



</androidx.constraintlayout.widget.ConstraintLayout>