<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="240dp"
        android:background="@color/background_in_mediaplayer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="25dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/background_in_mediaplayer"
                android:contentDescription="@string/arraw_back"
                android:src="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTag="back_button"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/playlist_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/album"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_button"
                app:shapeAppearanceOverlay="@style/circleImageView"
                tools:srcCompat="@drawable/album" />

            <TextView
                android:id="@+id/playlist_name_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/ys_display_bold"
                android:textColor="@color/black_light"
                android:textSize="@dimen/playlist_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlist_cover"
                app:layout_constraintVertical_bias="0.5"
                tools:text="Best songs 2021" />

            <TextView
                android:id="@+id/playlist_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/black_light"
                android:textSize="@dimen/playlist_info"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlist_name_"
                app:layout_constraintVertical_bias="0.5"
                tools:text="2022" />

            <TextView
                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/black_light"
                android:textSize="@dimen/playlist_info"
                app:layout_constraintEnd_toStartOf="@id/minutes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlist_description"
                app:layout_constraintVertical_bias="0.5"
                tools:text="300" />

            <TextView
                android:id="@+id/minutes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/minutes"
                android:textColor="@color/black_light"
                android:textSize="@dimen/playlist_info"
                app:layout_constraintEnd_toStartOf="@+id/dot"
                app:layout_constraintStart_toEndOf="@+id/minutes"
                app:layout_constraintTop_toBottomOf="@id/playlist_description"
                app:layout_constraintVertical_bias="0.5" />

            <ImageView
                android:id="@+id/dot"
                android:layout_width="6dp"
                android:layout_height="9dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/black_dot"
                app:layout_constraintBottom_toBottomOf="@id/minutes_text"
                app:layout_constraintEnd_toStartOf="@id/tracks_count"
                app:layout_constraintStart_toEndOf="@id/minutes_text"
                app:layout_constraintTop_toTopOf="@id/minutes_text"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tracks_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/black_light"
                android:textSize="@dimen/playlist_info"
                app:layout_constraintStart_toEndOf="@+id/dot"
                app:layout_constraintTop_toBottomOf="@id/playlist_description"
                app:layout_constraintVertical_bias="0.5"
                tools:text="98" />

            <TextView
                android:id="@+id/tracks_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/tracks_count"
                android:textColor="@color/black_light"
                android:textSize="@dimen/playlist_info"
                app:layout_constraintStart_toEndOf="@+id/tracks_count"
                app:layout_constraintTop_toBottomOf="@id/playlist_description"
                app:layout_constraintVertical_bias="0.5" />

            <ImageView
                android:id="@+id/share_playlist_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/share_playlist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/minutes"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/menu_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/menu"
                app:layout_constraintStart_toEndOf="@+id/share_playlist_ic"
                app:layout_constraintTop_toBottomOf="@+id/minutes"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/tracks_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@drawable/rectangle_in_bottomsheet" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constrainedHeight="true" />
    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/menu_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@drawable/rectangle_in_bottomsheet" />

        <LinearLayout
            android:id="@+id/item_cur_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/album"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:id="@+id/item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/cur_playlist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="14dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ys_display_regular"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="Best songs 2021" />

                <LinearLayout
                    android:id="@+id/item2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/track_count_bs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/ys_display_regular"
                        android:maxLines="1"
                        android:textColor="@color/text_author"
                        android:textSize="11sp"
                        tools:text="98 треков" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/share_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_inside_container">

            <TextView
                android:id="@+id/share"
                style="@style/TextInPlaylistBottom"
                android:layout_marginStart="16dp"
                android:text="@string/share_playlist"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_inside_container">

            <TextView
                android:id="@+id/edit"
                style="@style/TextInPlaylistBottom"
                android:layout_marginStart="16dp"
                android:text="@string/edit_playlist"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/delete_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_inside_container">

            <TextView
                android:id="@+id/delete"
                style="@style/TextInPlaylistBottom"
                android:layout_marginStart="16dp"
                android:text="@string/delete_playlist"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>